address prev PR comments